--- a/index.html
+++ b/index.html
@@ -9,11 +9,27 @@
   <body>
     <div class="container">
       <div class="row">
+        <div class="clouds">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <img src="images/electrical-storm-day.svg" alt="clouds icon">
+          <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
+          <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
+      </div>
         <div class="location">
-          <h1 class="text-center">Location goes here</h1>
+          <h1 class="text-center glow">Location goes here</h1>
         </div>
         <div class="temp">
-          <h1 class="text-center">Temperature goes here</h1>
+          <h1 class="text-center glow">Temperature goes here</h1>
         </div>
       </div>
     </div>
@@ -22,7 +38,9 @@
 
 
 
-
+  <!-- <footer>
+    <sub>Icons made by <a href="http://www.flaticon.com/authors/rami-mcmin" title="Rami McMin">Rami McMin</a></sub>
+  </footer> -->
     <script src="main.js" charset="utf-8"></script>
   </body>
 </html>
