--- a/index.html
+++ b/index.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Weather App</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
-      <div class="row">
-        <div class="clouds">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <img src="images/electrical-storm-day.svg" alt="clouds icon">
-          <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
-          <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
-      </div>
-        <div class="location">
-          <h1 class="text-center glow">Location goes here</h1>
+        <div class="row">
+            <div class="clouds">
+                <img src="images/clouds.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
+            </div>
+            <div class="location">
+                <h1 class="text-center glow">Location goes here</h1>
+            </div>
+            <div class="temp">
+                <h1 class="text-center glow">Temperature goes here</h1>
+            </div>
         </div>
-        <div class="temp">
-          <h1 class="text-center glow">Temperature goes here</h1>
-        </div>
-      </div>
     </div>
 
 
 
 
 
-  <!-- <footer>
+    <!-- <footer>
     <sub>Icons made by <a href="http://www.flaticon.com/authors/rami-mcmin" title="Rami McMin">Rami McMin</a></sub>
   </footer> -->
     <script src="main.js" charset="utf-8"></script>
-  </body>
+</body>
+
 </html>
