--- a/index.html
+++ b/index.html
@@ -12,23 +12,37 @@
     <div class="container">
         <div class="row">
             <div class="clouds">
-                <img src="images/clouds.svg" alt="clouds icon">
+                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
-                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
+                <img src="images/sun.svg" alt="sun icon">
+                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
             </div>
             <div class="location">
-                <h1 class="text-center glow">Location goes here</h1>
+                <h1 class="text-center glow" id='local'></h1>
             </div>
             <div class="temp">
                 <h1 class="text-center glow">Temperature goes here</h1>
@@ -38,11 +52,7 @@
 
 
 
-
-
-    <!-- <footer>
-    <sub>Icons made by <a href="http://www.flaticon.com/authors/rami-mcmin" title="Rami McMin">Rami McMin</a></sub>
-  </footer> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="main.js" charset="utf-8"></script>
 </body>
 
