--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
                 <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
             </div>
             <div class="location">
-                <h1 class="text-center glow" id='local'></h1>
+                <h1 class="text-center glow" id='city'></h1>
             </div>
-            <div class="temp">
-                <h1 class="text-center glow">Temperature goes here</h1>
+            <div class="temperature">
+                <h1 class="text-center glow" id='temp'>Temperature goes here</h1>
+            </div>
+            <div class="weather">
+                <h1 class="text-center glow" id='description'>Weather description goes here</h1>
             </div>
         </div>
     </div>
