--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <h1 class="text-center glow" id='city'></h1>
             </div>
             <div class="temperature">
-                <h1 class="text-center glow" id='temp'>Temperature goes here</h1>
+                <h1 class="text-center glow" id='temp'>ddd</h1>
             </div>
             <div class="weather">
-                <h1 class="text-center glow" id='description'>Weather description goes here</h1>
+                <h1 class="text-center glow" id='description'></h1>
             </div>
         </div>
     </div>
