--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h1 class="text-center glow" id='city'></h1>
             </div>
             <div class="temperature">
-                <h1 class="text-center glow" id='temp'>ddd</h1>
+                <h1 class="text-center glow" id='temp'></h1>
             </div>
             <div class="weather">
                 <h1 class="text-center glow" id='description'></h1>
