--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
                 <img src="images/sun.svg" alt="sun icon">
                 <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
             </div>
+            <div class="text-center">
+              <sub class="glow">
+                <p class="whyNot">MARIA'S SUPER 70's WEATHER FORCAST</p>
+              </sub>
+            </div>
             <div class="location">
                 <h1 class="text-center glow" id='city'></h1>
                 <h5></h5>
