--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
             </div>
             <div class="temperature">
                 <h1 class="text-center glow" id='temp'></h1>
+                <div class="container">
+                <span class="col-sm-12 text-center">
+                  <button class="btn btn-primary center-block celsius">C</button>
+                  <button class="btn btn-primary center-block farenheit">F</button>
+                </span>
+                </div>
             </div>
             <div class="weather">
                 <h1 class="text-center glow" id='description'></h1>
