--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="text-center">
               <sub class="glow">
-                <h5 class="whyNot">MARIA'S SUPER 70's WEATHER FORCAST</h5>
+                <h5 class="whyNot">MARIA'S SUPER 70's WEATHER FORECAST</h5>
               </sub>
             </div>
             <div class="location">
