--- a/index.html
+++ b/index.html
@@ -13,35 +13,52 @@
     <div class="container">
         <div class="row">
             <div class="clouds">
-                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
                 <img src="images/sun.svg" alt="sun icon">
-                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
                 <img src="images/sun.svg" alt="sun icon">
-                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
                 <img src="images/sun.svg" alt="sun icon">
-                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
                 <img src="images/sun.svg" alt="sun icon">
-                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
                 <img src="images/sun.svg" alt="sun icon">
-                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
                 <img src="images/sun.svg" alt="sun icon">
-                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
                 <img src="images/sun.svg" alt="sun icon">
-                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
                 <img src="images/sun.svg" alt="sun icon">
-                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
                 <img src="images/sun.svg" alt="sun icon">
-                <!-- <img src="images/clouds.svg" alt="clouds icon"> -->
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
+                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <img src="images/sun.svg" alt="sun icon">
             </div>
+
             <div class="text-center">
               <sub class="glow">
                 <h5 class="whyNot">MARIA'S SUPER 70's WEATHER FORECAST</h5>
@@ -61,9 +78,9 @@
             <div class="weather">
                 <h1 class="text-center glow" id='description'></h1>
                 <div class="weatherIcon text-center">
-                  <i class="wi wi-night-sleet"></i>
-                  <i class="wi wi-day-sunny"></i>
                   <!-- <i class="wi wi-night-sleet"></i> -->
+                  <i class="wi wi-day-sunny"></i>
+                  <!-- <i class="wi wi-day-cloudy"></i> -->
 
                 </div>
             </div>
