--- a/index.html
+++ b/index.html
@@ -78,10 +78,12 @@
             <div class="weather">
                 <h1 class="text-center glow" id='description'></h1>
                 <div class="weatherIcon text-center">
-                  <!-- <i class="wi wi-night-sleet"></i> -->
-                  <i class="wi wi-day-sunny"></i>
-                  <!-- <i class="wi wi-day-cloudy"></i> -->
-
+                  <i class="wi wi-day-rain-mix"></i>Drizzle
+                  <i class="wi wi-day-cloudy"></i>Cloudy
+                  <i class="wi wi-day-rain"></i>Rain
+                  <i class="wi wi-snow"></i>Snow
+                  <i class="wi wi-day-sunny"></i>Clear
+                  <i class="wi wi-thunderstorm"></i>Thunderstorm
                 </div>
             </div>
         </div>
