--- a/index.html
+++ b/index.html
@@ -78,18 +78,15 @@
             <div class="weather">
                 <h1 class="text-center glow" id='description'></h1>
                 <div class="weatherIcon text-center">
-                  <i class="wi wi-day-rain-mix"></i>Drizzle
-                  <i class="wi wi-day-cloudy"></i>Cloudy
-                  <i class="wi wi-day-rain"></i>Rain
-                  <i class="wi wi-snow"></i>Snow
-                  <i class="wi wi-day-sunny"></i>Clear
-                  <i class="wi wi-thunderstorm"></i>Thunderstorm
+                  <i class="wi wi-day-rain-mix hide drizzle"></i>
+                  <i class="wi wi-day-rain hide rain"></i>
+                  <i class="wi wi-snow hide snow"></i>
+                  <i class="wi wi-day-sunny hide clear"></i>
+                  <i class="wi wi-thunderstorm hide thunderstorm"></i>
                 </div>
             </div>
         </div>
     </div>
-
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="main.js" charset="utf-8"></script>
