--- a/index.html
+++ b/index.html
@@ -14,49 +14,49 @@
         <div class="row">
             <div class="clouds">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun' src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img src="images/electrical-storm-day.svg" alt="clouds icon">
-                <img src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
             </div>
 
             <div class="text-center">
@@ -77,6 +77,7 @@
             </div>
             <div class="weather">
                 <h1 class="text-center glow" id='description'></h1>
+
                 <div class="weatherIcon text-center">
                   <div class="drizzle hide">
                     <i class="wi wi-day-rain-mix"></i>
