--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             <div class="text-center">
               <sub class="glow">
-                <h5 class="whyNot">MARIA'S SUPER 70's WEATHER FORECAST</h5>
+                <h5 class="whyNot">THE SUPER 70's WEATHER FORECAST</h5>
               </sub>
             </div>
             <div class="location">
