--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="weather-icons-master/css/weather-icons.css">
+    <link rel="stylesheet" href="font-awesome-animations.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
