--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="bootstrap.css">
     <link rel="stylesheet" href="weather-icons-master/css/weather-icons.css">
-    <link rel="stylesheet" href="font-awesome-animations.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -62,7 +61,7 @@
 
             <div class="text-center">
               <sub class="glow">
-                <h5 class="whyNot">MARIA'S SUPER 70's WEATHER FORECAST</h5>
+                <h5 class="whyNot">THE SUPER 70's WEATHER FORECAST</h5>
               </sub>
             </div>
             <div class="location">
