--- a/index.html
+++ b/index.html
@@ -13,49 +13,80 @@
     <div class="container">
         <div class="row">
             <div class="clouds">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun' src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun'src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun'src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun'src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun'src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun'src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun'src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun'src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun'src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun'src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
                 <img class='sun'src="images/sun.svg" alt="sun icon">
-                <img src="images/electrical-storm-day.svg" alt="clouds icon">
+                 <!-- <img src="images/electrical-storm-day.svg" alt="clouds icon"> -->
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
+                <img class='sun'src="images/sun.svg" alt="sun icon">
                 <img class='sun'src="images/sun.svg" alt="sun icon">
             </div>
 
